# telegram_csv_parser

./: Cargo.toml  Makefile  README.md  example_collected_data_from_telegram.csv  index.html
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/anyhow/: struct.Chain.html  struct.Error.html
doc/atty/: enum.Stream.html  fn.is.html  fn.isnt.html
doc/clap/: enum.AppSettings.html  enum.ArgSettings.html  enum.ErrorKind.html  enum.Shell.html  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Error.html  struct.OsValues.html  struct.SubCommand.html  struct.Values.html
doc/memchr/: struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
doc/pest/: all.html  enum.Atomicity.html  enum.Lookahead.html  enum.MatchDir.html  enum.Token.html  fn.merge_spans.html  fn.set_call_limit.html  fn.state.html  index.html  macro.fails_with.html  macro.parses_to.html  struct.Lines.html  struct.LinesSpan.html  struct.ParserState.html  struct.Position.html  struct.Span.html  struct.Stack.html  trait.Parser.html  trait.RuleType.html  type.ParseResult.html
doc/pest_derive/: all.html  derive.Parser.html  index.html
doc/pest_generator/: all.html  fn.derive_parser.html  index.html
doc/pest_meta/: all.html  fn.parse_and_optimize.html  fn.unwrap_or_report.html  index.html
doc/proc_macro2/: enum.TokenTree.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.TokenStream.html
doc/quote/: trait.IdentFragment.html  trait.ToTokens.html
doc/strsim/: enum.StrSimError.html
doc/syn/: enum.BinOp.html  enum.Expr.html  (+50 more)
src/: csv.pest  lib.rs  main.rs
tests/: csv_tests.rs
(+14028 files in other folders)
