[package]
name = "telegram_csv_parser"
version = "0.1.1"
edition = "2021"
license = "MIT"
description ="Telegram-csv-parser"
include = [
    "src/**/*",
    "Cargo.toml",
    "examples/**/*"
    ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "2.33.0"
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.50"
